add react router

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/stripe.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="SAF Capability Assessment" />
+  <meta name="description" content="Stripe Adoption Framework" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/stripe.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>SAF Capability Assessment</title>
+  <title>Stripe Adoption Framework</title>
 </head>
 
 <body>
